fix font size was too big

--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
 :root {
   background: #524f4f95;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: .7em;
+  font-size: 12px;
   width: 100%;
   --border: #000000;
   --theme: #524f4f95;
